<resources>
    <string name="app_name">AndroidTraining</string>

    <string name="wechat">WeChat</string>
    <string name="remove_fragments">Remove Fragments</string>
    <string name="replace_fragments">Replace</string>
    <string name="banner">招商引资</string>
    <string name="banner_detail">招商引资的奥秘岂能如此轻易获取?</string>
    <string name="banner_response">Waiting Response</string>

    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>

    <string name="contacts_fragment_message">This Is Contacts Fragment</string>
    <string name="discover_fragment_message">This Is Discover Fragment</string>
    <string name="replace_fragment_message">This Is Replace Fragment</string>
    <string name="me_fragment_message">This Is Me Fragment</string>
    <string name="chats_fragment_message">This Is Chats Fragment</string>
    <string name="userName">default_name</string>
    <string name="userAge">default_age</string>
    <string name="userDetail">Hi Fans, I am Lisa.</string>
    <string name="viewUserDetail">Go to user detail page</string>

</resources>
